--- a/package.json
+++ b/package.json
@@ -6,8 +6,21 @@
     "start": "next start"
   },
   "dependencies": {
+    "@meilisearch/instant-meilisearch": "^0.6.0",
+    "axios": "^0.25.0",
     "next": "latest",
+    "next-themes": "^0.0.15",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-instantsearch-dom": "^6.22.0",
+    "react-markdown": "^8.0.0",
+    "react-moment": "^1.1.1",
+    "rehype-raw": "^6.1.1"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.1",
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.18"
   }
 }
