--- a/package.json
+++ b/package.json
@@ -1,21 +1,26 @@
 {
   "private": true,
+  "author": "Frej Andreassen",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start -p 8080"
   },
   "dependencies": {
     "@meilisearch/instant-meilisearch": "^0.6.0",
+    "@tailwindcss/aspect-ratio": "^0.4.0",
     "axios": "^0.25.0",
     "next": "latest",
     "next-themes": "^0.0.15",
+    "qs": "^6.10.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-instantsearch-dom": "^6.22.0",
     "react-markdown": "^8.0.0",
     "react-moment": "^1.1.1",
-    "rehype-raw": "^6.1.1"
+    "react-remark": "^2.1.0",
+    "rehype-raw": "^6.1.1",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.1",
